--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,8 @@ path = "src/main.rs"
 [dependencies]
 anyhow = "1.0.82"
 axum = "0.7.5"
+axum-macros = "0.4.1"
 reqwest = "0.12.4"
 serde = { version = "1.0.198", features = ["derive"] }
+serde_json = "1.0.116"
 tokio = { version = "1.37.0", features = ["full"] }
