--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "axum-z2p"
+name = "axum-zero2prod"
 version = "0.1.0"
 edition = "2021"
 
@@ -8,7 +8,7 @@ edition = "2021"
 path = "src/lib.rs"
 
 [[bin]]
-name = "axum-z2p"
+name = "axum-zero2prod"
 path = "src/main.rs"
 
 
@@ -20,3 +20,15 @@ reqwest = "0.12.4"
 serde = { version = "1.0.198", features = ["derive"] }
 serde_json = "1.0.116"
 tokio = { version = "1.37.0", features = ["full"] }
+
+[dependencies.sqlx]
+version = "0.7"
+default-features = false
+features = [
+    "runtime-tokio-rustls",
+    "macros",
+    "postgres",
+    "uuid",
+    "chrono",
+    "migrate",
+]
