--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,6 +21,8 @@ serde = { version = "1.0.198", features = ["derive"] }
 serde_json = "1.0.116"
 tokio = { version = "1.37.0", features = ["full"] }
 config = "0.13"
+uuid = { version = "1.8.0", features = ["v4"] }
+chrono = { version = "0.4.38", features = ["clock"] }
 
 [dependencies.sqlx]
 version = "0.7"
