--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,8 +25,7 @@ uuid = { version = "1.8.0", features = ["v4"] }
 chrono = { version = "0.4.38", features = ["clock"] }
 tracing-subscriber = "0.3.18"
 tower-http = { version = "0.5.2", features = ["trace"] }
-tracing = "0.1.40"
-log = "0.4.21"
+tracing = { version = "0.1.40", features = ["log"] }
 
 [dependencies.sqlx]
 version = "0.7"
