--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,9 +23,13 @@ tokio = { version = "1.37.0", features = ["full"] }
 config = "0.13"
 uuid = { version = "1.8.0", features = ["v4"] }
 chrono = { version = "0.4.38", features = ["clock"] }
-tracing-subscriber = "0.3.18"
+tracing-subscriber = { version = "0.3.18", features = ["registry", "env-filter"] }
 tower-http = { version = "0.5.2", features = ["trace"] }
 tracing = { version = "0.1.40", features = ["log"] }
+tracing-bunyan-formatter = "0.3.9"
+tracing-log = "0.2.0"
+once_cell = "1.19.0"
+secrecy = { version = "0.8.0", features = ["serde"] }
 
 [dependencies.sqlx]
 version = "0.7"
