--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,6 +30,7 @@ tracing-bunyan-formatter = "0.3.9"
 tracing-log = "0.2.0"
 once_cell = "1.19.0"
 secrecy = { version = "0.8.0", features = ["serde"] }
+unicode-segmentation = "1.11.0"
 
 [dependencies.sqlx]
 version = "0.7"
@@ -42,3 +43,6 @@ features = [
     "chrono",
     "migrate",
 ]
+
+[dev-dependencies]
+claims = "0.7.1"
