--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,6 +31,7 @@ tracing-log = "0.2.0"
 once_cell = "1.19.0"
 secrecy = { version = "0.8.0", features = ["serde"] }
 unicode-segmentation = "1.11.0"
+validator = "0.18.1"
 
 [dependencies.sqlx]
 version = "0.7"
@@ -46,3 +47,4 @@ features = [
 
 [dev-dependencies]
 claims = "0.7.1"
+fake = "~2.3"
