--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,7 +16,6 @@ path = "src/main.rs"
 anyhow = "1.0.82"
 axum = "0.7.5"
 axum-macros = "0.4.1"
-reqwest = "0.12.4"
 serde = { version = "1.0.198", features = ["derive"] }
 serde_json = "1.0.116"
 tokio = { version = "1.37.0", features = ["full"] }
@@ -32,6 +31,13 @@ once_cell = "1.19.0"
 secrecy = { version = "0.8.0", features = ["serde"] }
 unicode-segmentation = "1.11.0"
 validator = "0.18.1"
+
+
+[dependencies.reqwest]
+version = "0.12.4"
+default-features = false
+# "json" flag is needed to serialize/deserialize JSON payloads
+features = ["json", "rustls-tls"]
 
 [dependencies.sqlx]
 version = "0.7"
