Build send_email logic

--- a/configuration/base.yaml
+++ b/configuration/base.yaml
@@ -7,3 +7,8 @@ database:
   username: 'postgres'
   password: 'password'
   database_name: 'newsletter'
+
+email_client:
+  base_url: 'https://send.api.mailtrap.io/api/send'
+  sender_email: 'mailtrap@demomailtrap.com'
+  authorization_token: 'asdf'
