--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,20 +16,20 @@ path = "src/main.rs"
 anyhow = "1.0.82"
 axum = "0.7.5"
 axum-macros = "0.4.1"
+chrono = { version = "0.4.38", features = ["clock"] }
+config = "0.13"
+once_cell = "1.19.0"
+secrecy = { version = "0.8.0", features = ["serde"] }
 serde = { version = "1.0.198", features = ["derive"] }
 serde_json = "1.0.116"
 tokio = { version = "1.37.0", features = ["full"] }
-config = "0.13"
-uuid = { version = "1.8.0", features = ["v4"] }
-chrono = { version = "0.4.38", features = ["clock"] }
-tracing-subscriber = { version = "0.3.18", features = ["registry", "env-filter"] }
 tower-http = { version = "0.5.2", features = ["trace"] }
 tracing = { version = "0.1.40", features = ["log"] }
 tracing-bunyan-formatter = "0.3.9"
 tracing-log = "0.2.0"
-once_cell = "1.19.0"
-secrecy = { version = "0.8.0", features = ["serde"] }
+tracing-subscriber = { version = "0.3.18", features = ["registry", "env-filter"] }
 unicode-segmentation = "1.11.0"
+uuid = { version = "1.8.0", features = ["v4"] }
 validator = "0.18.1"
 
 
@@ -56,3 +56,4 @@ claims = "0.7.1"
 fake = "~2.3"
 quickcheck = "0.9.2"
 quickcheck_macros = "0.9.1"
+wiremock = "0.5"
